<?xml version="1.0" encoding="utf-8"?><!--android:background="#fffed6"#80CBC4-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#007F66"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:src="@drawable/shaurma_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/headerMain"
                android:textAlignment="center"
                android:textColor="#F0C843"
                android:textSize="22sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/frontside_adjusted2" />

        <TextView
            style="@style/headers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/headerOffer" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/roll"
                    android:layout_centerHorizontal="true"
                    android:text="@string/shaurma"
                    android:textSize="19sp"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/roll"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/shaurma"
                    android:tint="#007F66" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/productsDescr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hamburger"
                    android:text="@string/hamburger" />

                <ImageView
                    android:id="@+id/hamburger"
                    style="@style/productsPic"
                    android:src="@drawable/hamburger" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/productsDescr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hotdog"
                    android:text="@string/hotdog" />

                <ImageView
                    style="@style/productsPic"
                    android:id="@+id/hotdog"
                    android:src="@drawable/hotdog" />

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/productsDescr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/baguette"
                    android:text="@string/baguette" />

                <ImageView
                    style="@style/productsPic"
                    android:id="@+id/baguette"
                    android:src="@drawable/baguette" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/productsDescr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bread2"
                    android:text="@string/loaf" />

                <ImageView
                    style="@style/productsPic"
                    android:id="@+id/bread2"
                    android:src="@drawable/bread2" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    style="@style/productsDescr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bread"
                    android:text="@string/bread" />

                <ImageView
                    style="@style/productsPic"
                    android:id="@+id/bread"
                    android:src="@drawable/bread" />

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/productsDescr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cinnamon"
                    android:text="@string/cinnamon" />

                <ImageView
                    style="@style/productsPic"
                    android:id="@+id/cinnamon"
                    android:src="@drawable/cinnamon" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/productsDescr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bretzel"
                    android:text="@string/bretzel"
                     />

                <ImageView
                    style="@style/productsPic"
                    android:id="@+id/bretzel"
                    android:src="@drawable/brezel" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    style="@style/productsDescr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/croissant"
                    android:text="@string/croissant" />

                <ImageView
                    style="@style/productsPic"
                    android:id="@+id/croissant"
                    android:src="@drawable/croissant" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            style="@style/headers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/andMore" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:background="#007F66"></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingTop="12dp"
            android:text="@string/addressHeader"
            android:textSize="19sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/address"
                style="@style/contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/geomarker"
                android:text="@string/address"
                android:onClick="toMap"/>

            <ImageView
                style="@style/contactsImg"
                android:id="@+id/geomarker"
                android:src="@drawable/geomarker" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/phone"
                android:text="@string/phone"
                android:autoLink="phone"/>

            <ImageView
                style="@style/contactsImg"
                android:id="@+id/phone"
                android:src="@drawable/phone" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/calendar"
                android:text="@string/daysWorking" />

            <ImageView
                style="@style/contactsImg"
                android:id="@+id/calendar"
                android:src="@drawable/calendar6" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/clock"
                android:text="@string/workHours" />

            <ImageView
                style="@style/contactsImg"
                android:id="@+id/clock"
                android:src="@drawable/clock" />
        </RelativeLayout>
    </LinearLayout>


</ScrollView>